# LibMath

./: .editorconfig  .gitattribute  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt
source/include/LibMath/: Quaternion.h
source/include/LibMath/angle/: Radians.h
source/include/LibMath/matrix/: Matrix2.h  Matrix3.h  Matrix4.h
source/include/LibMath/vector/: Vector2.h  Vector3.h  Vector4.h
source/include/public/LibMath/: Arithmetic.h  Macros.h
source/include/public/LibMath/angle/: Degrees.h  Radians.h
source/include/public/LibMath/matrix/: Matrix2.h  Matrix3.h  Matrix4.h
source/include/public/LibMath/vector/: Vector2.h  Vector3.h
source/include/public/internal/: VariableType.hpp
source/source/: source.cpp
unitTest/: CMakeLists.txt
unitTest/source/: main.cpp
unitTest/source/unitTests/: Angle.cpp  Arithmetic.cpp  Matrix.cpp  Quaternion.cpp  Vector.cpp
